无缝的首尾轮播

--- a/slide-demo 1/index.html
+++ b/slide-demo 1/index.html
@@ -15,6 +15,11 @@
             <img src="./5.jpg" alt="图片5" width="400" height="300">
         </div>
     </div>
+    <div id="buttonWarpper" style="text-align:center">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+    </div>
     <script src="./jquery-3.3.1.min.js"></script>
     <script src="./main.js"></script>
 </body>
